fixed image overlap

--- a/styles/index.css
+++ b/styles/index.css
@@ -70,7 +70,7 @@
 
 #movie-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
 }
 
 .horizontal-navbar-button {
